# mcp-ethical-hacking

./: 1  README.md  server.json  server.mcpb
linkedin-mcp/: README.md  claude_desktop_config.json  client.py  pyproject.toml
linkedin-mcp/linkedin_mcp/: server.py
reddit-mcp/: README.md  claude_desktop_config.json  client.py  pyproject.toml
reddit-mcp/reddit_mcp/: server.py
