[project]
name = "linkedin-mcp"
version = "0.1.0"
description = "MCP server that exposing a linkedin profile with all his activities to impersonate posts like that profile"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Andi Ellison" }]
maintainers = [
    { name = "Andi Ellison", email = "andi.ellison.sec@gmail.com" },
]
keywords = ["mcp", "llm", "automation", "web", "fetch", "linkedin"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["anyio>=4.5", "click>=8.1.0", "httpx>=0.27", "mcp", "pandas (>=2.2.3,<3.0.0)", "bs4 (>=0.0.2,<0.0.3)", "numpy (>=2.2.4,<3.0.0)", "requests (>=2.32.3,<3.0.0)", "pillow (>=11.1.0,<12.0.0)", "wasmtime (>=31.0.0,<32.0.0)"]

[project.scripts]
linkedin-mcp = "linkedin_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkedin_mcp"]

[tool.pyright]
include = ["linkedin_mcp"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]

